chore: fix current tests